# cajaclara

./: .env.example  .gitignore  AGENTS.md  README.md  main.py  pyproject.toml
.devcontainer/: Dockerfile  devcontainer.json  docker-compose.yml
backend/: .env.example  CONFIGURATION.md  ENTREPRENEURSHIP_MODEL.md  OCR_IMPLEMENTATION.md  README.md  SETUP_INSTRUCTIONS.md  TECHNICAL_ARCHITECTURE.md  alembic.ini  main.py
backend/app/: config.py  main.py  openapi.yaml
backend/app/api/: __init__.py  deps.py
backend/app/core/: __init__.py  exceptions.py
backend/app/db/: base.py  database.py  init_db.py
backend/app/models/: __init__.py  bank_account.py  base.py  category.py  category_rule.py  entrepreneurship.py  transaction.py  user.py
backend/app/repositories/: __init__.py  bank_account.py  base.py  category.py  category_rule.py  transaction.py  user.py
backend/app/routes/: auth.py  bank_accounts.py  categories.py  transactions.py
backend/app/schemas/: __init__.py  auth.py  bank_account.py  category.py  common.py  transaction.py  user.py
backend/app/services/: bank_account.py  bank_account_service.py  category.py  ocr_service.py  transaction.py  transaction_service.py
backend/migrations/: env.py
backend/tests/: test_bank_accounts.py  test_categories.py  test_ocr.py  test_ocr_endpoint.py  test_ocr_integration.py  test_transactions.py
frontend/: .env.example  ARCHITECTURE.md  IMPLEMENTATION_GUIDE.md  MVP CAJA CLARA.html  README.md  SETUP.md  index.html  package-lock.json  package.json  vite.config.js
frontend/src/: App.jsx  main.jsx
(+43 files in other folders)
