[project]
name = "cajaclara-1"
version = "0.1.0"
description = "Sistema de gestión financiera para emprendedores"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "alembic>=1.17.0",
    "asyncpg>=0.30.0",
    "fastapi[standard]>=0.120.0",
    "openai>=2.6.0",
    "pillow>=12.0.0",
    "psycopg>=3.2.11",
    "psycopg2-binary>=2.9.9",
    "pydantic>=2.12.3",
    "pydantic-settings>=2.11.0",
    "python-dotenv>=1.1.1",
    "python-multipart>=0.0.20",
    "sqlalchemy[asyncio]>=2.0.44",
    "openpyxl>=3.1.2",
    "python-dateutil>=2.8.2",
]

[dependency-groups]
dev = [
    "pytest>=8.4.2",
    "pytest-asyncio>=1.2.0",
    "ruff>=0.14.2",
]
